<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">



    <TextView
        android:id="@+id/answerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_text"
        android:textColor="@color/swText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/inputQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/no_question"
        android:textColor="@color/swText"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"/>


    <ImageView
        android:id="@+id/answerImage"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:src="@drawable/chewie4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/responseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_is"
        android:textColor="@color/swText"
        android:layout_gravity="center"
        android:textSize="23dp"/>

    <TextView
        android:id="@+id/actualResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/default_answer"
        android:textColor="@color/swText"
        android:textSize="23dp"/>

</LinearLayout>