<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:gravity="bottom">

        <Button
            android:id="@+id/choicesButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/alternate_opinion"
            android:textColor="#ffffff"
            android:background="#000"
            android:layout_gravity="bottom"
            />
    </RelativeLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">



        <TextView
            android:id="@+id/answerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_text"
            android:textColor="@color/swText"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/inputQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/no_question"
            android:textColor="@color/swText"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"/>


        <ImageView
            android:id="@+id/answerImage"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:src="@drawable/chewie4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/responseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wookie_answer_is"
            android:textColor="@color/swText"
            android:layout_gravity="center"
            android:textSize="23dp"/>

        <TextView
            android:id="@+id/actualResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/default_answer"
            android:textColor="@color/swText"
            android:textSize="20dp"/>

    </LinearLayout>

</FrameLayout>