<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:gravity="bottom">

        <Button
            android:id="@+id/alternateButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/alternate_opinion"
            android:textColor="#ffffff"
            android:background="#000"
            android:layout_gravity="bottom"
            />
    </RelativeLayout>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

`
<TextView
    android:id="@+id/initialText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/question_text"
    android:layout_gravity="center"
    android:textColor="#FF00FF"
    android:textSize="23dp"/>


<EditText
    android:id="@+id/descriptionText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:textColor="#FF00FF"/>


<ImageView
    android:id="@+id/fortuneImage"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:src="@drawable/eight_ball"
    android:layout_marginTop="10dp"/>


<Button
    android:id="@+id/fortuneButton"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/ask_question"
    android:textSize="20dp"
    android:layout_marginTop="15dp"
    android:textColor="#FFF"
    android:background="#FF00FF"/>


</LinearLayout>
    </FrameLayout>